# libcitygml

./: .gitmodules  CMakeLists.txt
CMakeModules/: FindGLUTess.cmake
sources/: CMakeLists.txt
sources/include/citygml/: tesselator.h  vecs.hpp
sources/src/citygml/: polygon.cpp  tesselator.cpp  tesselatorbase.cpp
sources/src/parser/: appearanceelementparser.cpp  geocoordinatetransformer.cpp  parserxercesc.cpp
test/: CMakeLists.txt
