IF(WIN32)
    SET(CMAKE_SHARED_LINKER_FLAGS_DEBUG "${CMAKE_SHARED_LINKER_FLAGS_DEBUG} /NODEFAULTLIB:MSVCRT")
ENDIF()

FIND_PACKAGE( Xerces REQUIRED )

# glu vs glutess library
IF( LIBCITYGML_USE_GLUTESS )
  ADD_DEFINITIONS( -DUSE_GLUTESS )
ELSE( LIBCITYGML_USE_GLUTESS )
  FIND_PACKAGE( OPENGL REQUIRED )
ENDIF( LIBCITYGML_USE_GLUTESS )

IF( LIBCITYGML_DYNAMIC )
  ADD_DEFINITIONS( -DLIBCITYGML_DYNAMIC )
ELSE( LIBCITYGML_DYNAMIC )
  ADD_DEFINITIONS( -DLIBCITYGML_STATIC )
ENDIF( LIBCITYGML_DYNAMIC )

# INCLUDE_DIRECTORIES( ${CITYGML_INCLUDE_DIR} )
INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/../sources/include ${CMAKE_BINARY_DIR}/sources/include)

SET( PRG_SRCS citygmltest.cpp )

ADD_EXECUTABLE( citygmltest ${PRG_SRCS} )

IF( LIBCITYGML_USE_GLUTESS )
  TARGET_LINK_LIBRARIES( citygmltest citygml ${XERCESC_LIBRARIES} )
ELSE( LIBCITYGML_USE_GLUTESS )
  TARGET_LINK_LIBRARIES( citygmltest citygml ${XERCESC_LIBRARIES} ${OPENGL_LIBRARIES} )
ENDIF( LIBCITYGML_USE_GLUTESS )

if(NOT DEFINED BIN_INSTALL_DIR)
    set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
endif(NOT DEFINED BIN_INSTALL_DIR)

install(TARGETS citygmltest RUNTIME DESTINATION ${BIN_INSTALL_DIR})
